* Mon May 24 2004 <valery_reznic@users.sourceforge.net> 1.4.6-4
- eliminate 'expr' usage
- add RPMREBUILD_TMDDIR environment variable.  With default ~/.tmp/rpmrebuild
  It used instead of /tmp.

* Sun May 23 2004 <valery_reznic@users.sourceforge.net> 1.4.6-4
- fixed bug with parsing --long-option= 
- buildroot was changed not to use /tmp dir

* Wed May 19 2004 <valery_reznic@users.sourceforge.net> 1.4.6-3
- added long option abbreviation
- dir option changed to directory
- add all remaining dependencies (bash, sed, grep ...) to package

* Thu May 6 2004 <gerbier@users.sourceforge.net> 1.4.6-2
- split in 2 packages for rpm <4 and rpm >4 (add rpm-build dependency) 

* Mon Nov 24 2003 <gerbier@users.sourceforge.net> 1.4.6-1
- added -P/--autoprovide flag
- added -R/--autorequire flag

* Wed Nov 19 2003 <gerbier@users.sourceforge.net> 1.4.5-2
- change filter behavior to be more robust
- read -r on /etc/popt to keep backslash
- fix comment-missing option
- remove rpmlib dependencies from specfile
- remove gpg key from provide list
- fix wildcard problem in file list (guile) (Han Holl)

* Wed Jul  2 2003 <valery_reznic@users.sourceforge.net> 1.4.5-1
- switch from 'case' to usinf AskYesNo function
- added -y/--verify flag
- added -c/--comment-missing flag
- added missing -w/--warning to the Usage message

* Thu Jun 12 2003 <valery_reznic@users.sourceforge.net> 1.4.4-1
- added -m/--modify option - invoke script after rpm's file unpackaging
- added -a/--additional option - pass additional flags to rpmbuild
- added -D/--define option - set defines for rpmbuild
- after specfile editing (with -e option) is possible now abort rpm build 

* Mon Jun 09 2003 <valery_reznic@users.sourceforge.net> 1.4.3-1
- fixed problem with (none) in the FILELANG query
- rpmrebuild now working with rpm-4.2
- Makefile now can work with both  rpmbuild and rpm as package builder

* Mon Jun 02 2003 <valery_reznic@users.sourceforge.net> 1.4.2-1